# vrsa-gis

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  VRSA_ru_RU.ts  appStyles.qrc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  test.ui
app_styles/: dark.qss  dark_2.qss
calculations/: geomcalculations.h  mapcalculations.cpp  mapcalculations.h  unitconverter.h
common/: GisDefines.h  GisTypes.h  applicationsettings.cpp  applicationsettings.h  gisexceptions.h  layercreationparams.cpp  layercreationparams.h  logger.cpp  logger.h  rasterprocessingparams.cpp  rasterprocessingparams.h  spatialoperation_dto.cpp  spatialoperation_dto.h
customWidgets/: attributefieldtypecombobox.cpp  attributefieldtypecombobox.h  brushtypecombobox.cpp  brushtypecombobox.h  colorpushbutton.cpp  colorpushbutton.h  crscombobox.cpp  crscombobox.h  ellipsoidcombobox.cpp  ellipsoidcombobox.h  filedialogbutton.cpp  filedialogbutton.h  frame.cpp  frame.h  geometrytypecombobox.cpp  geometrytypecombobox.h  lipattributetablewidget.cpp  lipattributetablewidget.h  lipbrushtypecombobox.cpp  lipbrushtypecombobox.h  lipcolorpushbutton.cpp  lipcolorpushbutton.h  lipcombobox.cpp  lipcombobox.h  lipcrscombobox.cpp  lipcrscombobox.h  lipframe.cpp  lipframe.h  lipmapholder.cpp  lipmapholder.h  lippentypecombobox.cpp  lippentypecombobox.h  liprasterlayerscombobox.cpp  liprasterlayerscombobox.h  liptreewidget.cpp  liptreewidget.h  mapholder.cpp  mapholder.h  measurementform.cpp  measurementform.h  (+11 more)
customWidgets/rasterProccessingWidgets/: compressionmethodcombobox.cpp  compressionmethodcombobox.h  resamplingmethodcombobox.cpp  resamplingmethodcombobox.h
customWidgets/stylingWidgets/: colorpushbutton.cpp  colorpushbutton.h  stylingcomboboxes.cpp  stylingcomboboxes.h  symboltypecombobox.cpp  symboltypecombobox.h  vectorstylingspinbox.cpp  vectorstylingspinbox.h
gdal/: abstractvectorreader.cpp  abstractvectorreader.h  dataset.cpp  dataset.h  gdaldeleters.h  gdalreader.cpp  gdalreader.h  gdalresourcehandles.h  gdalvectorreader.cpp  gdalvectorreader.h  gdalwriter.cpp  gdalwriter.h  geometrytypeconverter.cpp  geometrytypeconverter.h  ivectordatareader.cpp  ivectordatareader.h  ogrconverter.cpp  ogrconverter.h  spatialreference.cpp  spatialreference.h  typeconversions.h
geometry/: geometry.h  geometryconverter.cpp  geometryconverter.h
georef/: spatialreferencelibrary.cpp  spatialreferencelibrary.h
graphics/: drawingcontext.cpp  drawingcontext.h  featuregraphicsitem.cpp  featuregraphicsitem.h  featuregraphicsitemfactory.cpp  featuregraphicsitemfactory.h  featuregraphicsitemrenderer.cpp  featuregraphicsitemrenderer.h  filerastergraphicsitem.cpp  filerastergraphicsitem.h  graphicsutils.cpp  graphicsutils.h  layerdrawingpolicy.cpp  layerdrawingpolicy.h  linefeaturedrawingpolicy.cpp  linefeaturedrawingpolicy.h  mapscene.cpp  mapscene.h  pointfeaturedrawingpolicy.cpp  pointfeaturedrawingpolicy.h  polygonfeaturedrawingpolicy.cpp  polygonfeaturedrawingpolicy.h  rastergraphicsitem.cpp  rastergraphicsitem.h  rastergraphicsitemfactory.cpp  rastergraphicsitemfactory.h  rasterstyle.cpp  rasterstyle.h  rubberbanditem.cpp  rubberbanditem.h  temporarygraphicsitem.cpp  temporarygraphicsitem.h  vectorfeaturedrawingpolicy.cpp  vectorfeaturedrawingpolicy.h  vectorfeaturestyle.cpp  vectorfeaturestyle.h  vectorfeaturestyle.h.autosave  vertexhandle.cpp  vertexhandle.h  webrastergraphicsitem.cpp  (+1 more)
graphics/drawing_policies/: baselinedrawingpolicy.cpp  baselinedrawingpolicy.h  basepointdrawingpolicy.cpp  basepointdrawingpolicy.h  basepolygondrawingpolicy.cpp  basepolygondrawingpolicy.h  linefeaturedrawingpolicy.cpp  linefeaturedrawingpolicy.h  multilinefeaturedrawingpolicy.cpp  multilinefeaturedrawingpolicy.h  multipointfeaturedrawingpolicy.cpp  multipointfeaturedrawingpolicy.h  multipolygonfeaturedrawingpolicy.cpp  (+7 more)
raster/: rasterchannel.cpp  rasterchannel.h  rasterdataset.cpp  rasterdataset.h  webrasterdataset.cpp  webrasterdataset.h
rastertools/: clipprocessor.cpp  clipprocessor.h  gdalrasterprocessor.cpp  gdalrasterprocessor.h  isolinesprocessor.cpp  isolinesprocessor.h  reprojectprocessor.cpp  reprojectprocessor.h
services/: digitizingmanager.cpp  digitizingmanager.h  giscontroller.cpp  giscontroller.h  projectmanager.cpp  projectmanager.h
spatialref/: coordinatetransformer.cpp  coordinatetransformer.h  spatialrefdatabase.cpp  spatialrefdatabase.h  spatialreference.cpp  spatialreference.h
test_utils/: geometryfactory.h  testsymbolfactory.cpp  testsymbolfactory.h  vectorlayertest.cpp  vectorlayertest.h
tools/: digitizingtool.cpp  digitizingtool.h  digitizingtoolfactory.cpp  digitizingtoolfactory.h  editgeometrytool.cpp  editgeometrytool.h  linedigitizingtool.cpp  linedigitizingtool.h  maptool.cpp  maptool.h  maptoolfactory.cpp  maptoolfactory.h  pointdigitizingtool.cpp  pointdigitizingtool.h  polygondigitizingtool.cpp  polygondigitizingtool.h  rectselectiontool.cpp  rectselectiontool.h  rulertool.cpp  rulertool.h  selectiontool.cpp  selectiontool.h  selectiontoolfactory.cpp  selectiontoolfactory.h  singleselectiontool.cpp  singleselectiontool.h
ui/: attributetableform.cpp  attributetableform.h  attributetableform.ui  basedatasetform.cpp  basedatasetform.h  geosoperationform.cpp  geosoperationform.h  geosoperationform.ui  mainwindow.ui  mapserviceconnectionform.cpp  mapserviceconnectionform.h  mapserviceconnectionform.ui  postgisconnectionform.cpp  postgisconnectionform.h  postgisconnectionform.ui  rasterproccessingform.cpp  rasterproccessingform.h  rasterproccessingform.ui  vectordatasetform.cpp  vectordatasetform.h  vectordatasetform.ui  vectorlayercreationform.cpp  vectorlayercreationform.h  vectorlayercreationform.ui  vectorreprojectionform.cpp  vectorreprojectionform.h  vectorreprojectionform.ui  vectorstylingform.cpp  vectorstylingform.h  vectorstylingform.ui
vector/: vectordataset.cpp  vectordataset.h  vectorfeature.cpp  vectorfeature.h  vectorlayer.cpp  vectorlayer.h
vectorlayertools/: multigeometryexploder.cpp  multigeometryexploder.h  vectorlayercreator.cpp  vectorlayercreator.h
(+63 files in other folders)
